# backend

./: instruction.md  pyproject.toml  requirements.txt
agents/: agen_polisi.py  hoax.py  image.py  research.py  settings.py  trend_kejahatan.py
api/: main.py  settings.py
api/dependencies/: auth.py
api/routes/: playground.py
data/: LAMPIRANISOPLIDIKSIDIKPERKABA1THN2022TGL27DES2022.md
workflows/: modus_operandi.py  settings.py
workspace/: dev_resources.py  prd_resources.py  settings.py
